Implement project settings (issue #80)